# adlcv

./: .gitignore  fairy_tales.md  pyproject.toml
adlcv_ex_1/: einops_tutorial.py  test_implementation.py  text_classification.py  transformer.py
adlcv_ex_2/: EXPERIMENT_FRAMEWORK_SUMMARY.md  __init__.py  imageclassification.py  playground.py  vit.py
adlcv_ex_2/experiments/: README.md  __init__.py  configs.py  run_experiments.py  test_setup.py  visualize_results.py
adlcv_ex_2/experiments/results/: detailed_summary.csv  summary.csv  summary_table.md
adlcv_ex_2/experiments/results/experiment_001/: config.json  metrics.json  model.pth
adlcv_ex_2/experiments/results/experiment_002/: config.json  metrics.json  model.pth
adlcv_ex_2/experiments/results/experiment_003/: config.json  metrics.json  model.pth
adlcv_ex_3/: data_summary.md  gpt.py  plot_metrics.py  prompt.md  test.py  test_implementation.py  train.py
author-kit-ADLCV/: main.tex
checkpoints/: metrics.csv
