[project]
name = "adlcv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "pandas>=2.0.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchtext>=0.6.0",
    "torchvision>=0.25.0",
]
